# app/src/modules/router.js
@@ -16,7 +16,8 @@ const global = window;
         { re: /^\/worksheet\/([^/]+)$/, name: '/worksheet/:slug', keys: [1] },
         { re: /^\/learning-tools\/?$/, name: '/learning-tools' },
         { re: /^\/learning-notes\/?$/, name: '/learning-notes' },
-        { re: /^\/worksheets\/?$/, name: '/worksheets' },
+        { re: /^\/flashcards\/([^/]+)$/, name: '/flashcards/:slug', keys: [1] },
+        { re: /^\/flashcards\/?$/, name: '/flashcards' },
         { re: /^\/learning-videos\/?$/, name: '/learning-videos' },
         { re: /^\/articles\/?$/, name: '/articles' },
         { re: /^\/courses\/?$/, name: '/courses' },
@@ -59,6 +60,9 @@ const global = window;
         { re: /^\/admin\/question-banks\/new\/?$/, name: '/admin/question-banks/new' },
         { re: /^\/admin\/question-banks\/(\d+)\/edit\/?$/, name: '/admin/question-banks/:id/edit', keys: [1] },
         { re: /^\/admin\/question-banks\/?$/, name: '/admin/question-banks' },
+        { re: /^\/admin\/flashcard-sets\/new\/?$/, name: '/admin/flashcard-sets/new' },
+        { re: /^\/admin\/flashcard-sets\/(\d+)\/edit\/?$/, name: '/admin/flashcard-sets/:id/edit', keys: [1] },
+        { re: /^\/admin\/flashcard-sets\/?$/, name: '/admin/flashcard-sets' },
         { re: /^\/admin\/course-curriculum\/?$/, name: '/admin/course-curriculum' },
         { re: /^\/admin\/nav-menu\/?$/, name: '/admin/nav-menu' },
         { re: /^\/admin\/permissions\/?$/, name: '/admin/permissions' },
